# docker_fastapi

./: Dockerfile  README.md  app.py  pyproject.toml
