[project]
name = "docker-fastapi"
version = "0.1.0"
description = "FastAPI simple app"
authors = [
    {name = "vld.bgdn@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
